[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/menu.gd" type="Script" id=1]
[ext_resource path="res://assets/items/ItemDB.gd" type="Script" id=2]

[node name="Menu" type="Node2D"]
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_top = -0.794434
margin_right = 380.0
margin_bottom = 190.206
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Join" type="Button" parent="Panel"]
margin_left = 66.732
margin_top = 101.29
margin_right = 142.732
margin_bottom = 121.29
rect_pivot_offset = Vector2( 50.3421, 10 )
text = "JOIN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Create" type="Button" parent="Panel"]
margin_left = 236.343
margin_top = 101.29
margin_right = 312.343
margin_bottom = 121.29
rect_pivot_offset = Vector2( 50.3421, 10 )
text = "CREATE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Panel"]
margin_left = 66.0
margin_top = 44.0
margin_right = 314.0
margin_bottom = 68.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ItemDB" type="Node" parent="."]
script = ExtResource( 2 )
[connection signal="pressed" from="Panel/Join" to="." method="_on_Join_pressed"]
[connection signal="pressed" from="Panel/Create" to="." method="_on_Create_pressed"]
[connection signal="text_changed" from="Panel/LineEdit" to="." method="_on_LineEdit_text_changed"]
